# eslint-bazel-test

./: .eslintrc.yaml  .prettierrc.yaml  BUILD.bazel  WORKSPACE.bazel  package.json  pnpm-lock.yaml  tsconfig.json
python/: requirements.in  requirements_lock.txt
tools/: BUILD.bazel  eslint.sh
