workspace(
    name = "bazel-test",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# https://github.com/bazelbuild/rules_python
http_archive(
    name = "rules_python",
    sha256 = "a868059c8c6dd6ad45a205cca04084c652cfe1852e6df2d5aca036f6e5438380",
    strip_prefix = "rules_python-0.14.0",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.14.0.tar.gz",
)

# Toolchain registration for reproducibility
# https://github.com/bazelbuild/rules_python#toolchain-registration
load("@rules_python//python:repositories.bzl", "python_register_toolchains")

# Available versions listed in https://github.com/bazelbuild/rules_python/blob/main/python/versions.bzl
python_register_toolchains(
    name = "python3_10",
    ignore_root_user_error = True,
    python_version = "3.10.6",
)

load("@python3_10//:defs.bzl", "interpreter")
load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "py_deps",
    python_interpreter_target = interpreter,
    requirements_lock = "//python:requirements_lock.txt",
)

load("@py_deps//:requirements.bzl", "install_deps")

install_deps()

http_archive(
    name = "aspect_rules_js",
    sha256 = "8b9aef2a32b31fccac2de1474ed5336933e779743c82642f225336c466dadada",
    strip_prefix = "rules_js-1.25.2",
    url = "https://github.com/aspect-build/rules_js/releases/download/v1.25.2/rules_js-v1.25.2.tar.gz",
)

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")

rules_js_dependencies()

load("@aspect_rules_js//npm:npm_import.bzl", "npm_translate_lock")
load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "register_jq_toolchains")

aspect_bazel_lib_dependencies()

register_jq_toolchains()

load("@rules_nodejs//nodejs:repositories.bzl", "DEFAULT_NODE_VERSION", "nodejs_register_toolchains")

nodejs_register_toolchains(
    name = "nodejs",
    node_version = DEFAULT_NODE_VERSION,
)

npm_translate_lock(
    name = "pnpm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

http_archive(
    name = "aspect_rules_ts",
    sha256 = "0f43d06b02895f825ac18a60901e899d91b22a11d44c4008c8383ada6096a4a9",
    strip_prefix = "rules_ts-2.0.1",
    url = "https://github.com/aspect-build/rules_ts/releases/download/v2.0.1/rules_ts-v2.0.1.tar.gz",
)

load("@aspect_rules_ts//ts:repositories.bzl", "rules_ts_dependencies")

rules_ts_dependencies(ts_version_from = "//:package.json")

load("@pnpm//:repositories.bzl", "npm_repositories")

npm_repositories()
